--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple Node.js application",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "build": "echo 'Build script placeholder'" // Placeholder build script
   },
   "dependencies": {
     "express": "^4.17.1"
