--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "build": "echo 'Build script placeholder'" // Placeholder build script
+    "build": "echo 'Build script placeholder'" 
   },
   "dependencies": {
     "express": "^4.17.1"
